--- a/x11/iv/src/bin/dclock/FREEBSD/Makefile
+++ b/x11/iv/src/bin/dclock/FREEBSD/Makefile
@@ -90,7 +90,7 @@ NONSHARED_CCLDFLAGS =
 	$(LDLIBX11)\
 	$(LDLIBM)\
 	$(ABSLIBDIRPATH)
-     EXTRA_CCLDLIBS = -lg++ -lcompat
+     EXTRA_CCLDLIBS = -lg++
 
             INSTALL = install
        INSTPGMFLAGS = -s
@@ -227,235 +227,3 @@ segment.o: $(SRC)/segment.$(CCSUFFIX)
 	@$(RM) segment.o segment..c
 	$(CCDRIVER)  $(CCFLAGS) -c $(SRC)/segment.$(CCSUFFIX)
 
-# DO NOT DELETE
-
-clocktime.o: ../clocktime.h /usr/include/g++/time.h
-clocktime.o: /usr/include/g++/_G_config.h /usr/include/g++/sys/time.h
-clocktime.o: /usr/include/g++/string.h
-data.o: ../dclock.h /usr/include/g++/string.h /usr/include/g++/_G_config.h
-data.o: ../../../.././src/include/IV-2_6/InterViews/interactor.h
-data.o: ../../../.././src/include/InterViews/enter-scope.h
-data.o: ../../../.././src/include/InterViews/iv.h
-data.o: ../../../.././src/include/InterViews/_undefs.h
-data.o: ../../../.././src/include/InterViews/_defines.h
-data.o: ../../../.././src/include/IV-2_6/_enter.h
-data.o: ../../../.././src/include/IV-2_6/_names.h
-data.o: ../../../.././src/include/OS/enter-scope.h
-data.o: ../../../.././src/include/OS/os.h
-data.o: ../../../.././src/include/OS/_defines.h
-data.o: ../../../.././src/include/OS/leave-scope.h
-data.o: ../../../.././src/include/OS/_undefs.h
-data.o: ../../../.././src/include/InterViews/boolean.h
-data.o: ../../../.././src/include/InterViews/coord.h
-data.o: ../../../.././src/include/InterViews/geometry.h
-data.o: ../../../.././src/include/InterViews/_enter.h
-data.o: ../../../.././src/include/InterViews/_names.h
-data.o: ../../../.././src/include/InterViews/_leave.h
-data.o: ../../../.././src/include/InterViews/glyph.h
-data.o: ../../../.././src/include/InterViews/resource.h
-data.o: ../../../.././src/include/IV-2_6/InterViews/alignment.h
-data.o: ../../../.././src/include/IV-2_6/_leave.h
-data.o: ../../../.././src/include/IV-2_6/InterViews/minmax.h
-data.o: ../../../.././src/include/IV-2_6/InterViews/textstyle.h
-data.o: ../../../.././src/include/IV-2_6/InterViews/painter.h
-data.o: ../../../.././src/include/InterViews/canvas.h
-data.o: ../../../.././src/include/IV-2_6/InterViews/sensor.h
-data.o: ../../../.././src/include/InterViews/event.h
-data.o: ../../../.././src/include/IV-2_6/InterViews/shape.h
-data.o: ../../../.././src/include/IV-2_6/InterViews/world.h
-data.o: ../../../.././src/include/InterViews/session.h
-data.o: ../../../.././src/include/IV-2_6/InterViews/frame.h
-data.o: ../../../.././src/include/IV-2_6/InterViews/scene.h
-data.o: ../../../.././src/include/IV-2_6/InterViews/interactor.h
-data.o: ../../../.././src/include/IV-2_6/InterViews/banner.h
-data.o: ../../../.././src/include/IV-2_6/InterViews/border.h
-data.o: ../../../.././src/include/IV-2_6/InterViews/box.h
-data.o: ../../../.././src/include/IV-2_6/InterViews/paint.h
-data.o: ../../../.././src/include/InterViews/brush.h
-data.o: ../../../.././src/include/InterViews/color.h
-data.o: ../../../.././src/include/InterViews/font.h
-data.o: ../../../.././src/include/InterViews/pattern.h ../data.h ../segment.h
-dclock.o: ../dclock.h /usr/include/g++/string.h /usr/include/g++/_G_config.h
-dclock.o: ../../../.././src/include/IV-2_6/InterViews/interactor.h
-dclock.o: ../../../.././src/include/InterViews/enter-scope.h
-dclock.o: ../../../.././src/include/InterViews/iv.h
-dclock.o: ../../../.././src/include/InterViews/_undefs.h
-dclock.o: ../../../.././src/include/InterViews/_defines.h
-dclock.o: ../../../.././src/include/IV-2_6/_enter.h
-dclock.o: ../../../.././src/include/IV-2_6/_names.h
-dclock.o: ../../../.././src/include/OS/enter-scope.h
-dclock.o: ../../../.././src/include/OS/os.h
-dclock.o: ../../../.././src/include/OS/_defines.h
-dclock.o: ../../../.././src/include/OS/leave-scope.h
-dclock.o: ../../../.././src/include/OS/_undefs.h
-dclock.o: ../../../.././src/include/InterViews/boolean.h
-dclock.o: ../../../.././src/include/InterViews/coord.h
-dclock.o: ../../../.././src/include/InterViews/geometry.h
-dclock.o: ../../../.././src/include/InterViews/_enter.h
-dclock.o: ../../../.././src/include/InterViews/_names.h
-dclock.o: ../../../.././src/include/InterViews/_leave.h
-dclock.o: ../../../.././src/include/InterViews/glyph.h
-dclock.o: ../../../.././src/include/InterViews/resource.h
-dclock.o: ../../../.././src/include/IV-2_6/InterViews/alignment.h
-dclock.o: ../../../.././src/include/IV-2_6/_leave.h
-dclock.o: ../../../.././src/include/IV-2_6/InterViews/minmax.h
-dclock.o: ../../../.././src/include/IV-2_6/InterViews/textstyle.h
-dclock.o: ../../../.././src/include/IV-2_6/InterViews/painter.h
-dclock.o: ../../../.././src/include/InterViews/canvas.h
-dclock.o: ../../../.././src/include/IV-2_6/InterViews/sensor.h
-dclock.o: ../../../.././src/include/InterViews/event.h
-dclock.o: ../../../.././src/include/IV-2_6/InterViews/shape.h
-dclock.o: ../../../.././src/include/IV-2_6/InterViews/world.h
-dclock.o: ../../../.././src/include/InterViews/session.h
-dclock.o: ../../../.././src/include/IV-2_6/InterViews/frame.h
-dclock.o: ../../../.././src/include/IV-2_6/InterViews/scene.h
-dclock.o: ../../../.././src/include/IV-2_6/InterViews/interactor.h
-dclock.o: ../../../.././src/include/IV-2_6/InterViews/banner.h
-dclock.o: ../../../.././src/include/IV-2_6/InterViews/border.h
-dclock.o: ../../../.././src/include/IV-2_6/InterViews/box.h
-dclock.o: ../../../.././src/include/IV-2_6/InterViews/paint.h
-dclock.o: ../../../.././src/include/InterViews/brush.h
-dclock.o: ../../../.././src/include/InterViews/color.h
-dclock.o: ../../../.././src/include/InterViews/font.h
-dclock.o: ../../../.././src/include/InterViews/pattern.h ../data.h ../dface.h
-dclock.o: /usr/include/g++/stdio.h /usr/include/g++/stdlib.h
-dclock.o: /usr/include/g++/stddef.h
-dface.o: ../../../.././src/include/Dispatch/dispatcher.h
-dface.o: ../../../.././src/include/Dispatch/enter-scope.h
-dface.o: ../../../.././src/include/Dispatch/dp.h
-dface.o: ../../../.././src/include/Dispatch/_defines.h
-dface.o: ../../../.././src/include/OS/enter-scope.h
-dface.o: ../../../.././src/include/OS/os.h
-dface.o: ../../../.././src/include/OS/_defines.h
-dface.o: ../../../.././src/include/OS/leave-scope.h
-dface.o: ../../../.././src/include/OS/_undefs.h
-dface.o: ../../../.././src/include/Dispatch/iocallback.h
-dface.o: ../../../.././src/include/Dispatch/iohandler.h ../dclock.h
-dface.o: /usr/include/g++/string.h /usr/include/g++/_G_config.h
-dface.o: ../../../.././src/include/IV-2_6/InterViews/interactor.h
-dface.o: ../../../.././src/include/InterViews/enter-scope.h
-dface.o: ../../../.././src/include/InterViews/iv.h
-dface.o: ../../../.././src/include/InterViews/_undefs.h
-dface.o: ../../../.././src/include/InterViews/_defines.h
-dface.o: ../../../.././src/include/IV-2_6/_enter.h
-dface.o: ../../../.././src/include/IV-2_6/_names.h
-dface.o: ../../../.././src/include/InterViews/boolean.h
-dface.o: ../../../.././src/include/InterViews/coord.h
-dface.o: ../../../.././src/include/InterViews/geometry.h
-dface.o: ../../../.././src/include/InterViews/_enter.h
-dface.o: ../../../.././src/include/InterViews/_names.h
-dface.o: ../../../.././src/include/InterViews/_leave.h
-dface.o: ../../../.././src/include/InterViews/glyph.h
-dface.o: ../../../.././src/include/InterViews/resource.h
-dface.o: ../../../.././src/include/IV-2_6/InterViews/alignment.h
-dface.o: ../../../.././src/include/IV-2_6/_leave.h
-dface.o: ../../../.././src/include/IV-2_6/InterViews/minmax.h
-dface.o: ../../../.././src/include/IV-2_6/InterViews/textstyle.h
-dface.o: ../../../.././src/include/IV-2_6/InterViews/painter.h
-dface.o: ../../../.././src/include/InterViews/canvas.h
-dface.o: ../../../.././src/include/IV-2_6/InterViews/sensor.h
-dface.o: ../../../.././src/include/InterViews/event.h
-dface.o: ../../../.././src/include/IV-2_6/InterViews/shape.h
-dface.o: ../../../.././src/include/IV-2_6/InterViews/world.h
-dface.o: ../../../.././src/include/InterViews/session.h
-dface.o: ../../../.././src/include/IV-2_6/InterViews/frame.h
-dface.o: ../../../.././src/include/IV-2_6/InterViews/scene.h
-dface.o: ../../../.././src/include/IV-2_6/InterViews/interactor.h
-dface.o: ../../../.././src/include/IV-2_6/InterViews/banner.h
-dface.o: ../../../.././src/include/IV-2_6/InterViews/border.h
-dface.o: ../../../.././src/include/IV-2_6/InterViews/box.h
-dface.o: ../../../.././src/include/IV-2_6/InterViews/paint.h
-dface.o: ../../../.././src/include/InterViews/brush.h
-dface.o: ../../../.././src/include/InterViews/color.h
-dface.o: ../../../.././src/include/InterViews/font.h
-dface.o: ../../../.././src/include/InterViews/pattern.h ../data.h ../dface.h
-dface.o: ../digit.h ../clocktime.h /usr/include/g++/time.h
-dface.o: /usr/include/g++/sys/time.h
-digit.o: ../dclock.h /usr/include/g++/string.h /usr/include/g++/_G_config.h
-digit.o: ../../../.././src/include/IV-2_6/InterViews/interactor.h
-digit.o: ../../../.././src/include/InterViews/enter-scope.h
-digit.o: ../../../.././src/include/InterViews/iv.h
-digit.o: ../../../.././src/include/InterViews/_undefs.h
-digit.o: ../../../.././src/include/InterViews/_defines.h
-digit.o: ../../../.././src/include/IV-2_6/_enter.h
-digit.o: ../../../.././src/include/IV-2_6/_names.h
-digit.o: ../../../.././src/include/OS/enter-scope.h
-digit.o: ../../../.././src/include/OS/os.h
-digit.o: ../../../.././src/include/OS/_defines.h
-digit.o: ../../../.././src/include/OS/leave-scope.h
-digit.o: ../../../.././src/include/OS/_undefs.h
-digit.o: ../../../.././src/include/InterViews/boolean.h
-digit.o: ../../../.././src/include/InterViews/coord.h
-digit.o: ../../../.././src/include/InterViews/geometry.h
-digit.o: ../../../.././src/include/InterViews/_enter.h
-digit.o: ../../../.././src/include/InterViews/_names.h
-digit.o: ../../../.././src/include/InterViews/_leave.h
-digit.o: ../../../.././src/include/InterViews/glyph.h
-digit.o: ../../../.././src/include/InterViews/resource.h
-digit.o: ../../../.././src/include/IV-2_6/InterViews/alignment.h
-digit.o: ../../../.././src/include/IV-2_6/_leave.h
-digit.o: ../../../.././src/include/IV-2_6/InterViews/minmax.h
-digit.o: ../../../.././src/include/IV-2_6/InterViews/textstyle.h
-digit.o: ../../../.././src/include/IV-2_6/InterViews/painter.h
-digit.o: ../../../.././src/include/InterViews/canvas.h
-digit.o: ../../../.././src/include/IV-2_6/InterViews/sensor.h
-digit.o: ../../../.././src/include/InterViews/event.h
-digit.o: ../../../.././src/include/IV-2_6/InterViews/shape.h
-digit.o: ../../../.././src/include/IV-2_6/InterViews/world.h
-digit.o: ../../../.././src/include/InterViews/session.h
-digit.o: ../../../.././src/include/IV-2_6/InterViews/frame.h
-digit.o: ../../../.././src/include/IV-2_6/InterViews/scene.h
-digit.o: ../../../.././src/include/IV-2_6/InterViews/interactor.h
-digit.o: ../../../.././src/include/IV-2_6/InterViews/banner.h
-digit.o: ../../../.././src/include/IV-2_6/InterViews/border.h
-digit.o: ../../../.././src/include/IV-2_6/InterViews/box.h
-digit.o: ../../../.././src/include/IV-2_6/InterViews/paint.h
-digit.o: ../../../.././src/include/InterViews/brush.h
-digit.o: ../../../.././src/include/InterViews/color.h
-digit.o: ../../../.././src/include/InterViews/font.h
-digit.o: ../../../.././src/include/InterViews/pattern.h ../data.h ../digit.h
-digit.o: ../segment.h
-segment.o: ../dclock.h /usr/include/g++/string.h /usr/include/g++/_G_config.h
-segment.o: ../../../.././src/include/IV-2_6/InterViews/interactor.h
-segment.o: ../../../.././src/include/InterViews/enter-scope.h
-segment.o: ../../../.././src/include/InterViews/iv.h
-segment.o: ../../../.././src/include/InterViews/_undefs.h
-segment.o: ../../../.././src/include/InterViews/_defines.h
-segment.o: ../../../.././src/include/IV-2_6/_enter.h
-segment.o: ../../../.././src/include/IV-2_6/_names.h
-segment.o: ../../../.././src/include/OS/enter-scope.h
-segment.o: ../../../.././src/include/OS/os.h
-segment.o: ../../../.././src/include/OS/_defines.h
-segment.o: ../../../.././src/include/OS/leave-scope.h
-segment.o: ../../../.././src/include/OS/_undefs.h
-segment.o: ../../../.././src/include/InterViews/boolean.h
-segment.o: ../../../.././src/include/InterViews/coord.h
-segment.o: ../../../.././src/include/InterViews/geometry.h
-segment.o: ../../../.././src/include/InterViews/_enter.h
-segment.o: ../../../.././src/include/InterViews/_names.h
-segment.o: ../../../.././src/include/InterViews/_leave.h
-segment.o: ../../../.././src/include/InterViews/glyph.h
-segment.o: ../../../.././src/include/InterViews/resource.h
-segment.o: ../../../.././src/include/IV-2_6/InterViews/alignment.h
-segment.o: ../../../.././src/include/IV-2_6/_leave.h
-segment.o: ../../../.././src/include/IV-2_6/InterViews/minmax.h
-segment.o: ../../../.././src/include/IV-2_6/InterViews/textstyle.h
-segment.o: ../../../.././src/include/IV-2_6/InterViews/painter.h
-segment.o: ../../../.././src/include/InterViews/canvas.h
-segment.o: ../../../.././src/include/IV-2_6/InterViews/sensor.h
-segment.o: ../../../.././src/include/InterViews/event.h
-segment.o: ../../../.././src/include/IV-2_6/InterViews/shape.h
-segment.o: ../../../.././src/include/IV-2_6/InterViews/world.h
-segment.o: ../../../.././src/include/InterViews/session.h
-segment.o: ../../../.././src/include/IV-2_6/InterViews/frame.h
-segment.o: ../../../.././src/include/IV-2_6/InterViews/scene.h
-segment.o: ../../../.././src/include/IV-2_6/InterViews/interactor.h
-segment.o: ../../../.././src/include/IV-2_6/InterViews/banner.h
-segment.o: ../../../.././src/include/IV-2_6/InterViews/border.h
-segment.o: ../../../.././src/include/IV-2_6/InterViews/box.h
-segment.o: ../../../.././src/include/IV-2_6/InterViews/paint.h
-segment.o: ../../../.././src/include/InterViews/brush.h
-segment.o: ../../../.././src/include/InterViews/color.h
-segment.o: ../../../.././src/include/InterViews/font.h
-segment.o: ../../../.././src/include/InterViews/pattern.h ../data.h
-segment.o: ../segment.h /usr/include/g++/stdio.h
