--- a/x11/iv/src/bin/mailbox/Makefile
+++ b/x11/iv/src/bin/mailbox/Makefile
@@ -90,7 +90,7 @@ NONSHARED_CCLDFLAGS =
 	$(LDLIBX11)\
 	$(LDLIBM)\
 	$(ABSLIBDIRPATH)
-     EXTRA_CCLDLIBS = -lg++ -lcompat
+     EXTRA_CCLDLIBS = -lg++
 
             INSTALL = install
        INSTPGMFLAGS = -s
