--- a/devel/gdb/Makefile.in
+++ b/devel/gdb/Makefile.in
@@ -314,7 +314,6 @@ ALL_MODULES = \
 	all-patch \
 	all-prms \
 	all-rcs \
-	all-readline \
 	all-release \
 	all-recode \
 	all-sed \
@@ -363,7 +362,6 @@ CHECK_MODULES = \
 	check-patch \
 	check-prms \
 	check-rcs \
-	check-readline \
 	check-recode \
 	check-sed \
 	check-send-pr \
@@ -412,7 +410,6 @@ INSTALL_MODULES = \
 	install-patch \
 	install-prms \
 	install-rcs \
-	install-readline \
 	install-recode \
 	install-sed \
 	install-send-pr \
@@ -802,7 +799,7 @@ all-gas: all-libiberty all-opcodes all-bfd
 all-gash: all-tcl
 all-gawk:
 all-gcc: all-libiberty all-byacc all-binutils all-gas all-pagas
-all-gdb: all-libiberty all-opcodes all-bfd all-mmalloc all-readline all-glob all-byacc all-sim
+all-gdb: all-libiberty all-opcodes all-bfd all-mmalloc all-glob all-byacc all-sim
 all-glob:
 all-gprof: all-libiberty all-bfd
 all-grep: all-libiberty
@@ -822,7 +819,6 @@ all-opcodes: all-bfd
 all-patch:
 all-prms: all-libiberty
 all-rcs:
-all-readline:
 all-recode: all-libiberty
 all-sed: all-libiberty
 all-send-pr: all-prms
@@ -915,7 +911,7 @@ DEVO_SUPPORT= README Makefile.in configure configure.in \
 ETC_SUPPORT= Makefile.in cfg-paper.texi configure.in configure.man \
 	configure.texi standards.texi make-stds.texi
 
-GDB_SUPPORT_DIRS= bfd include libiberty mmalloc opcodes readline glob sim
+GDB_SUPPORT_DIRS= bfd include libiberty mmalloc opcodes glob sim
 GDB_SUPPORT_FILES= $(GDB_SUPPORT_DIRS)
 
 .PHONY: setup-dirs-gdb gdb.tar.gz make-gdb.tar.gz
@@ -950,8 +946,6 @@ make-gdb.tar.gz: $(DEVO_SUPPORT) $(GDB_SUPPORT_DIRS) gdb texinfo/texinfo.tex
 	ln proto-toplev/gdb/COPYING proto-toplev/bfd/COPYING
 	rm                          proto-toplev/include/COPYING
 	ln proto-toplev/gdb/COPYING proto-toplev/include/COPYING
-	rm                          proto-toplev/readline/COPYING
-	ln proto-toplev/gdb/COPYING proto-toplev/readline/COPYING
 
 	# Change the bug reporting address in configure to bug-gdb
 	rm proto-toplev/configure
