--- a/devel/gdb/configure.in
+++ b/devel/gdb/configure.in
@@ -24,7 +24,7 @@
 
 # these libraries are used by various programs built for the host environment
 #
-host_libs="mmalloc libiberty opcodes bfd readline gash tcl tk tclX"
+host_libs="mmalloc libiberty opcodes bfd gash tcl tk tclX"
 
 # these tools are built for the host environment
 #
