readline moved to system one -g changed to -O

--- a/devel/gdb/gdb/Makefile.in
+++ b/devel/gdb/gdb/Makefile.in
@@ -110,11 +110,7 @@ BFD = $(BFD_DIR)/libbfd.a
 BFD_SRC = $(srcdir)/$(BFD_DIR)
 BFD_CFLAGS = -I$(BFD_DIR) -I$(BFD_SRC)
 
-# Where is the READLINE library?  Typically in ../readline.
-READLINE_DIR = ../readline
-READLINE = $(READLINE_DIR)/libreadline.a
-READLINE_SRC = $(srcdir)/$(READLINE_DIR)
-READLINE_CFLAGS = -I$(READLINE_SRC)
+READLINE_CFLAGS = -I/usr/include/readline
 
 # Opcodes currently live in one of two places.  Either they are in the
 # opcode library, typically ../opcodes, or they are in a header file
@@ -144,7 +140,7 @@ GLOBAL_CFLAGS = $(MT_CFLAGS) $(MH_CFLAGS)
 
 # CFLAGS is specifically reserved for setting from the command line
 # when running make.  I.E.  "make CFLAGS=-Wmissing-prototypes".
-CFLAGS = -g
+CFLAGS = -O
 
 # INTERNAL_CFLAGS is the aggregate of all other *CFLAGS macros.
 INTERNAL_CFLAGS = $(CFLAGS) $(GLOBAL_CFLAGS) $(PROFILE_CFLAGS) \
@@ -166,10 +162,10 @@ REGEX1 = regex.o
 # you can use 'CLIBS=$(INSTALLED_LIBS)' 'CDEPS='
 INSTALLED_LIBS=-lbfd -lreadline $(TERMCAP) -lopcodes -lmmalloc \
 	-liberty $(XM_CLIBS) $(TM_CLIBS) $(NAT_CLIBS)
-CLIBS = $(BFD) $(READLINE) $(OPCODES) $(MMALLOC) \
-	$(LIBIBERTY) $(TERMCAP) $(XM_CLIBS) $(TM_CLIBS) $(NAT_CLIBS)
+CLIBS = $(BFD) $(OPCODES) $(MMALLOC) \
+	$(LIBIBERTY) -lreadline $(TERMCAP) $(XM_CLIBS) $(TM_CLIBS) $(NAT_CLIBS)
 CDEPS = $(XM_CDEPS) $(TM_CDEPS) $(NAT_CDEPS) \
-	$(BFD) $(READLINE) $(OPCODES) $(MMALLOC) $(LIBIBERTY)
+	$(BFD) $(OPCODES) $(MMALLOC) $(LIBIBERTY)
 
 ADD_FILES = $(REGEX) $(XM_ADD_FILES) $(TM_ADD_FILES) $(NAT_ADD_FILES)
 ADD_DEPS = $(REGEX1) $(XM_ADD_FILES) $(TM_ADD_FILES) $(NAT_ADD_FILES)
@@ -330,12 +326,6 @@ SFILES_KGDB  = $(SFILES) stuff.c kdb-start.c
 dcache_h = dcache.h
 remote_utils_h = $(dcache_h) serial.h target.h remote-utils.h remote-sim.h
 
-readline_headers = \
-	$(READLINE_SRC)/chardefs.h \
-	$(READLINE_SRC)/history.h \
-	$(READLINE_SRC)/keymaps.h \
-	$(READLINE_SRC)/readline.h
-
 udiheaders = \
 	$(srcdir)/29k-share/udi/udiproc.h \
 	$(srcdir)/29k-share/udi/udiphcfg.h \
@@ -495,7 +485,6 @@ saber_gdb: $(SFILES) $(DEPFILES) copying.c version.c
 	#load ../opcodes/libopcodes.a
 	#load ../libiberty/libiberty.a
 	#load ../bfd/libbfd.a
-	#load ../readline/libreadline.a
 	#load ../mmalloc/libmmalloc.a
 	#load -ltermcap 
 	#load `echo " "$(DEPFILES) | sed -e 's/\.o/.c/g' -e 's, , ../,g'`
@@ -1174,10 +1163,10 @@ m88k-nat.o: m88k-nat.c $(defs_h) $(gdbcore_h) $(inferior_h)
 m88k-pinsn.o: m88k-pinsn.c $(defs_h) $(symtab_h) 
 m88k-tdep.o: m88k-tdep.c $(defs_h) $(gdbcore_h) $(inferior_h)
 
-main.o: main.c $(bfd_h) $(getopt_h) $(readline_headers) call-cmds.h \
+main.o: main.c $(bfd_h) $(getopt_h) call-cmds.h \
 	$(defs_h) $(gdbcmd_h) $(inferior_h) language.h signals.h \
 	$(remote_utils_h)
-	$(CC) -c $(INTERNAL_CFLAGS) $(READLINE_CFLAGS) $(srcdir)/main.c
+	$(CC) -c $(INTERNAL_CFLAGS) $(srcdir)/main.c
 
 maint.o: maint.c $(defs_h) $(gdbcmd_h) $(gdbtypes_h) $(symtab_h) 
 mem-break.o: mem-break.c $(defs_h) 
