Remove readline, we have better one in system remove -g from CFLAGS

--- a/math/octave/octave/configure.in
+++ b/math/octave/octave/configure.in
@@ -88,8 +88,8 @@ AC_CONST
 
 case "$CC" in
   gcc* | */gcc*)
-    CFLAGS="-g -O -Wall"
-    LDFLAGS="-g -O"
+    CFLAGS="-O -Wall"
+    LDFLAGS="-O"
     gcc_version=`gcc -v 2>&1 | grep "^gcc version" | sed 's/^gcc version *//'`
     case "$gcc_version" in
       1.*)
@@ -115,7 +115,7 @@ AC_SUBST(LDFLAGS)dnl
 
 AC_PROGRAM_CHECK(CXX, g++, g++, [])dnl
 if test "$CXX" = g++ ; then
-  CXXFLAGS="-g -O -Wall"
+  CXXFLAGS="-O -Wall"
   gxx_version=`g++ -v 2>&1 | grep "^g.. version" | sed 's/^g.. version *//'`
   case "$gxx_version" in
     1.*)
@@ -310,17 +310,6 @@ EOF
   ;;
 esac
 
-
-# Hack for readline's sysdep.h
-
-case "$target_host_type" in
-  *next*)
-    echo "using BSD version of readline/sysdep.h on the NeXT"
-    rm -f readline/sysdep.h
-    cp readline/sysdep-obsd.h readline/sysdep.h
-  ;;
-esac
-
 # Check to see if we have IEEE math functions, and if so, which ones.
 #
 # Also check for some additional trig functions that aren't ANSI but
@@ -419,8 +408,8 @@ define([tmph], [libcruft/ranlib/Makefile libcruft/villad/Makefile])dnl
 define([cruftdirs], [tmpa tmpb tmpc tmpd tmpe tmpf tmpg tmph])dnl
 define([tmpA], [Makefile Makeconf libcruft/Makefile libcruft/Makerules])dnl
 define([tmpB], [liboctave/Makefile src/Makefile dld/Makefile])dnl
-define([tmpC], [info/Makefile readline/Makefile readline/doc/Makefile])dnl
-define([tmpD], [readline/examples/Makefile doc/Makefile])dnl
+define([tmpC], [info/Makefile])dnl
+define([tmpD], [doc/Makefile])dnl
 define([tmpE], [scripts/Makefile test/Makefile])dnl
 define([srcdirs], [tmpA tmpB tmpC tmpD tmpE])dnl
 AC_OUTPUT([srcdirs cruftdirs])dnl
