--- a/math/octave/octave/src/Makefile.in
+++ b/math/octave/octave/src/Makefile.in
@@ -110,7 +110,7 @@ OBJECTS = arith-ops.o builtins.o error.o file-io.o g-builtins.o \
 	@DYNAMIC_LD_OBJ@
 
 OCTAVE_LIBS = ../liboctave.a ../libcruft.a ../libinfo.a \
-	../libreadline.a @LIBDLD@
+	@LIBDLD@
 
 DISTFILES = Makefile.in move-if-change parse.cc lex.cc y.tab.h \
 	$(INCLUDES) $(SOURCES)
@@ -123,7 +123,7 @@ octave: $(DLD_OBJECTS) $(OBJECTS) $(OCTAVE_LIBS) $(LIBOBJS)
 	$(OBJECTS) @DLD_OBJECTS@ \
 	$(OCTAVE_LIBS) \
 	$(LIBOBJS) \
-	$(FLIBS) $(LEXLIB) -ltermcap -lm -lg++
+	$(FLIBS) $(LEXLIB) -lreadline -ltermcap -lm -lg++
 
 check: all
 .PHONY: check
