--- a/devel/gmake/configure.in
+++ b/devel/gmake/configure.in
@@ -3,8 +3,8 @@ AC_INIT(vpath.c)		dnl A distinctive file to look for in srcdir.
 AC_CONFIG_HEADER(config.h)
 
 # We want these before the checks, so the checks can modify their values.
-test -z "$CFLAGS" && CFLAGS=-g AC_SUBST(CFLAGS)
-test -z "$LDFLAGS" && LDFLAGS=-g AC_SUBST(LDFLAGS)
+test -z "$CFLAGS" && CFLAGS=-O AC_SUBST(CFLAGS)
+test -z "$LDFLAGS" && LDFLAGS= AC_SUBST(LDFLAGS)
 
 AC_PROG_CC
 AC_PROG_INSTALL
