--- a/lang/tclX/Makefile
+++ b/lang/tclX/Makefile
@@ -14,7 +14,7 @@
 # software for any purpose.  It is provided "as is" without express or
 # implied warranty.
 #------------------------------------------------------------------------------
-# $Id: Makefile,v 1.4 1994/04/11 15:00:32 jkh Exp $
+# $Id: Makefile,v 1.5 1994/05/13 11:55:19 jkh Exp $
 #------------------------------------------------------------------------------
 #
 SHELL=/bin/sh
@@ -25,8 +25,8 @@ SHELL=/bin/sh
 CC                = cc
 RANLIB            = ranlib
 srcdir            = .
-srcbasedir        = /usr1/FreeBSD.ports/lang/tclX
-bldbasedir        = /usr1/FreeBSD.ports/lang/tclX
+srcbasedir        = /usr/ports/lang/tclX
+bldbasedir        = /usr/ports/lang/tclX
 VPATH             = .
 prefix            = /usr/local
 exec_prefix       = /usr/local
