Added a package target.

--- a/editor/emacs/Makefile.in
+++ b/editor/emacs/Makefile.in
@@ -461,3 +461,6 @@ info:
 	(cd ${srcdir}/man; $(MAKE) $(MFLAGS) info)
 dvi:
 	(cd ${srcdir}/man; $(MAKE) $(MFLAGS) dvi)
+
+package: install pkg/+CONTENTS pkg/+DESC pkg/+COMMENT
+	pkg_create -c pkg/+COMMENT -d pkg/+DESC -f pkg/+CONTENTS emacs_bin
