--- a/x11/blt/configure.in
+++ b/x11/blt/configure.in
@@ -389,6 +389,12 @@ AC_PROGRAM_CHECK(uname_found, uname, 1, 0)
         SHLIB_LOADER="$CC"
         SHLIB_SUFFIX='.so.$(MAJOR_VERSION)'
         ;;
+      FreeBSD*|386BSD*|NetBSD*)
+	SHLIB_CCFLAGS="-fpic"
+	SHLIB_LDFLAGS="-Bshareable"
+	SHLIB_LOADER="ld"
+	SHLIB_SUFFIX='.so.$(MAJOR_VERSION).$(MINOR_VERSION)'
+	;;
       *)
 	echo "Don't know how to make shared libraries for $system"
 	;;
