--- a/x11/blt/Makefile.in
+++ b/x11/blt/Makefile.in
@@ -28,7 +28,7 @@ X_INCLUDE     = @XINCSW@
 X_LIB        = @XLIBSW@ -lX11
 TK_LIB       = @TKLIBSW@ -ltk
 TCL_LIB      = @TCLLIBSW@ -ltcl
-BLT_LIB      = ./src/libBLT.a
+BLT_LIB      = -L./src/shared -L./src -lBLT
 EXTRA_LIBS   = @LIBS@ #-R@TKLIBDIR@:@TCLLIBDIR@:@XLIBDIR@
 
 
@@ -48,7 +48,7 @@ srcdir	     = @srcdir@
 
 all: $(demo)
 
-$(demo): normallib
+$(demo): normallib sharedlib
 	@echo "linking BLT demo as \"$(demo)\"..."
 	$(CC) $(CC_SWITCHES) $(srcdir)/tkAppInit.c -o $(demo) $(LIBRARIES)
 	@echo "make finished on `date`"
@@ -79,7 +79,11 @@ install-lib:
 install-library:
 	@(cd library; $(MAKE) install)
 
-install: install-top install-library install-bin install-lib install-man 
+install: install-top install-library install-bin install-lib install-man \
+	install-apps
+
+package: install
+	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST -r pkg/+REQ blt_bin
 
 clean:
 	@echo "cleaning in ./src"
@@ -90,7 +94,17 @@ clean:
 	@(cd man; $(MAKE) clean)
 	@echo "cleaning in ./library"
 	@(cd library; $(MAKE) clean)
-	$(RM) $(demo) *\~ "#"*
+	@(cd ./applications/kosherdill; $(MAKE) clean)
+	@(cd ./applications/extloader; $(MAKE) clean)
+	$(RM) $(demo) blt_bin.tgz *\~ "#"*
+
+apps:
+	@(cd ./applications/kosherdill; $(MAKE))
+	@(cd ./applications/extloader; $(MAKE))
+
+install-apps: apps
+	@(cd ./applications/kosherdill; $(MAKE) install)
+	@(cd ./applications/extloader; $(MAKE) install)
 
 GENERATED_FILES = \
 	config.status \
